CA1/gen/main/grammar/SimpleLOOPParser.java
// Generated from /Users/ali_akhgary/Desktop/Term6.tmp/Compiler/CA/1/src/main/grammar/SimpleLOOP.g4 by ANTLR 4.9.2
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleLOOPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Class=1, Private=2, Public=3, Int=4, Bool=5, Fptr=6, Set=7, Self=8, Initialize=9, 
		True=10, False=11, Return=12, Print=13, Each=14, Do=15, New=16, If=17, 
		Else=18, Elseif=19, Void=20, Null=21, Delete=22, Include=23, Add=24, Merge=25, 
		Dot=26, Plus=27, Minus=28, Mult=29, Div=30, DoubleSlash=31, Assign=32, 
		Increment=33, Decrement=34, GreaterThan=35, LessThan=36, Equals=37, And=38, 
		Or=39, Not=40, QuestionMark=41, Colon=42, LPar=43, RPar=44, LBracket=45, 
		RBracket=46, LBrace=47, RBrace=48, Comma=49, SemiCollon=50, Hashtag=51, 
		Arrow=52, OneOr=53, CommentBegin=54, CommentEnd=55, Newline=56, WS=57, 
		ClassIdentifier=58, Identifier=59, Number=60, COMMENT=61, LINE_COMMENT=62, 
		NEWLINE_SKIP=63;
	public static final int
		RULE_simpleLOOP = 0, RULE_variablesScope = 1, RULE_identifier = 2, RULE_classScope = 3, 
		RULE_classSignature = 4, RULE_classBody = 5, RULE_singleClassBody = 6, 
		RULE_classVariables = 7, RULE_classMethods = 8, RULE_methodArguments = 9, 
		RULE_methodBody = 10, RULE_returnExpression = 11, RULE_array = 12, RULE_fptr = 13, 
		RULE_set = 14, RULE_block = 15, RULE_statement = 16, RULE_functionCallArgs = 17, 
		RULE_funcCallArgs = 18, RULE_functionCallStatement = 19, RULE_variableStatement = 20, 
		RULE_conditionStatement = 21, RULE_loopStatement = 22, RULE_expression = 23, 
		RULE_assignmentExpression = 24, RULE_tripleConditionalExpression = 25, 
		RULE_logicalOrExpression = 26, RULE_logicalAndExpression = 27, RULE_equalityExpression = 28, 
		RULE_comparisionExpression = 29, RULE_additiveExpression = 30, RULE_multDivExpression = 31, 
		RULE_prefixExpression = 32, RULE_incDecExpression = 33, RULE_arrayExpression = 34, 
		RULE_extraExpression = 35, RULE_defaultFunctionExpression = 36, RULE_value = 37, 
		RULE_types = 38, RULE_methodTypes = 39, RULE_additiveOperators = 40, RULE_multDivOperators = 41, 
		RULE_incrementDecrementOperators = 42, RULE_bool = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"simpleLOOP", "variablesScope", "identifier", "classScope", "classSignature", 
			"classBody", "singleClassBody", "classVariables", "classMethods", "methodArguments", 
			"methodBody", "returnExpression", "array", "fptr", "set", "block", "statement", 
			"functionCallArgs", "funcCallArgs", "functionCallStatement", "variableStatement", 
			"conditionStatement", "loopStatement", "expression", "assignmentExpression", 
			"tripleConditionalExpression", "logicalOrExpression", "logicalAndExpression", 
			"equalityExpression", "comparisionExpression", "additiveExpression", 
			"multDivExpression", "prefixExpression", "incDecExpression", "arrayExpression", 
			"extraExpression", "defaultFunctionExpression", "value", "types", "methodTypes", 
			"additiveOperators", "multDivOperators", "incrementDecrementOperators", 
			"bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'private'", "'public'", "'int'", "'bool'", "'fptr'", 
			"'Set'", "'self'", "'initialize'", "'true'", "'false'", "'return'", "'print'", 
			"'each'", "'do'", "'new'", "'if'", "'else'", "'elsif'", "'void'", "'null'", 
			"'delete'", "'include'", "'add'", "'merge'", "'.'", "'+'", "'-'", "'*'", 
			"'/'", "'//'", "'='", "'++'", "'--'", "'>'", "'<'", "'=='", "'&&'", "'||'", 
			"'!'", "'?'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
			"';'", "'#'", "'->'", "'|'", "'=begin'", "'=end'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Class", "Private", "Public", "Int", "Bool", "Fptr", "Set", "Self", 
			"Initialize", "True", "False", "Return", "Print", "Each", "Do", "New", 
			"If", "Else", "Elseif", "Void", "Null", "Delete", "Include", "Add", "Merge", 
			"Dot", "Plus", "Minus", "Mult", "Div", "DoubleSlash", "Assign", "Increment", 
			"Decrement", "GreaterThan", "LessThan", "Equals", "And", "Or", "Not", 
			"QuestionMark", "Colon", "LPar", "RPar", "LBracket", "RBracket", "LBrace", 
			"RBrace", "Comma", "SemiCollon", "Hashtag", "Arrow", "OneOr", "CommentBegin", 
			"CommentEnd", "Newline", "WS", "ClassIdentifier", "Identifier", "Number", 
			"COMMENT", "LINE_COMMENT", "NEWLINE_SKIP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleLOOP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    void print(String str, Boolean... params){
	        assert params.length <= 1;
	        boolean inline = params.length > 0 ? params[0].booleanValue() : false;
	        if (inline) {
	            System.out.print(str);
	        } else
	            System.out.println(str);
	    }

	public SimpleLOOPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SimpleLOOPContext extends ParserRuleContext {
		public VariablesScopeContext variablesScope() {
			return getRuleContext(VariablesScopeContext.class,0);
		}
		public ClassScopeContext classScope() {
			return getRuleContext(ClassScopeContext.class,0);
		}
		public List<TerminalNode> Newline() { return getTokens(SimpleLOOPParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(SimpleLOOPParser.Newline, i);
		}
		public SimpleLOOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleLOOP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterSimpleLOOP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitSimpleLOOP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitSimpleLOOP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleLOOPContext simpleLOOP() throws RecognitionException {
		SimpleLOOPContext _localctx = new SimpleLOOPContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_simpleLOOP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Newline) {
				{
				{
				setState(88);
				match(Newline);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			variablesScope();
			setState(95);
			classScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesScopeContext extends ParserRuleContext {
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> Newline() { return getTokens(SimpleLOOPParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(SimpleLOOPParser.Newline, i);
		}
		public VariablesScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterVariablesScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitVariablesScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitVariablesScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesScopeContext variablesScope() throws RecognitionException {
		VariablesScopeContext _localctx = new VariablesScopeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variablesScope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << Fptr) | (1L << Set) | (1L << LBracket) | (1L << ClassIdentifier) | (1L << Identifier))) != 0)) {
				{
				{
				setState(97);
				types();
				setState(98);
				identifier();
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(99);
					match(Newline);
					}
					}
					setState(102); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Newline );
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public Token varId;
		public List<TerminalNode> Identifier() { return getTokens(SimpleLOOPParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SimpleLOOPParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(SimpleLOOPParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(SimpleLOOPParser.Comma, i);
		}
		public TerminalNode SemiCollon() { return getToken(SimpleLOOPParser.SemiCollon, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			((IdentifierContext)_localctx).varId = match(Identifier);
			print("VarDec : " + (((IdentifierContext)_localctx).varId!=null?((IdentifierContext)_localctx).varId.getText():null));
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(111);
				match(Comma);
				setState(112);
				((IdentifierContext)_localctx).varId = match(Identifier);
				print("VarDec : " + (((IdentifierContext)_localctx).varId!=null?((IdentifierContext)_localctx).varId.getText():null));
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(119);
				match(SemiCollon);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassScopeContext extends ParserRuleContext {
		public List<ClassSignatureContext> classSignature() {
			return getRuleContexts(ClassSignatureContext.class);
		}
		public ClassSignatureContext classSignature(int i) {
			return getRuleContext(ClassSignatureContext.class,i);
		}
		public List<TerminalNode> Newline() { return getTokens(SimpleLOOPParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(SimpleLOOPParser.Newline, i);
		}
		public ClassScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassScopeContext classScope() throws RecognitionException {
		ClassScopeContext _localctx = new ClassScopeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classScope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Class) {
				{
				{
				setState(122);
				classSignature();
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Newline) {
					{
					{
					setState(123);
					match(Newline);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassSignatureContext extends ParserRuleContext {
		public Token classId;
		public Token inheritId;
		public TerminalNode Class() { return getToken(SimpleLOOPParser.Class, 0); }
		public TerminalNode LBrace() { return getToken(SimpleLOOPParser.LBrace, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode RBrace() { return getToken(SimpleLOOPParser.RBrace, 0); }
		public List<TerminalNode> ClassIdentifier() { return getTokens(SimpleLOOPParser.ClassIdentifier); }
		public TerminalNode ClassIdentifier(int i) {
			return getToken(SimpleLOOPParser.ClassIdentifier, i);
		}
		public TerminalNode LessThan() { return getToken(SimpleLOOPParser.LessThan, 0); }
		public List<TerminalNode> Newline() { return getTokens(SimpleLOOPParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(SimpleLOOPParser.Newline, i);
		}
		public TerminalNode SemiCollon() { return getToken(SimpleLOOPParser.SemiCollon, 0); }
		public SingleClassBodyContext singleClassBody() {
			return getRuleContext(SingleClassBodyContext.class,0);
		}
		public ClassSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassSignatureContext classSignature() throws RecognitionException {
		ClassSignatureContext _localctx = new ClassSignatureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classSignature);
		int _la;
		try {
			int _alt;
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(Class);
				setState(135);
				((ClassSignatureContext)_localctx).classId = match(ClassIdentifier);
				print("ClassDec : " + (((ClassSignatureContext)_localctx).classId!=null?((ClassSignatureContext)_localctx).classId.getText():null));
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LessThan) {
					{
					setState(137);
					match(LessThan);
					setState(138);
					((ClassSignatureContext)_localctx).inheritId = match(ClassIdentifier);
					print("Inheritance : " + (((ClassSignatureContext)_localctx).classId!=null?((ClassSignatureContext)_localctx).classId.getText():null) + " < " + (((ClassSignatureContext)_localctx).inheritId!=null?((ClassSignatureContext)_localctx).inheritId.getText():null));
					}
				}

				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Newline) {
					{
					{
					setState(142);
					match(Newline);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(148);
				match(LBrace);
				setState(150); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(149);
					match(Newline);
					}
					}
					setState(152); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Newline );
				setState(154);
				classBody();
				setState(155);
				match(RBrace);
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemiCollon) {
					{
					setState(156);
					match(SemiCollon);
					}
				}

				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(159);
						match(Newline);
						}
						} 
					}
					setState(164);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				match(Class);
				setState(166);
				((ClassSignatureContext)_localctx).classId = match(ClassIdentifier);
				print("ClassDec : " + (((ClassSignatureContext)_localctx).classId!=null?((ClassSignatureContext)_localctx).classId.getText():null));
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LessThan) {
					{
					setState(168);
					match(LessThan);
					setState(169);
					((ClassSignatureContext)_localctx).inheritId = match(ClassIdentifier);
					print("Inheritance : " + (((ClassSignatureContext)_localctx).classId!=null?((ClassSignatureContext)_localctx).classId.getText():null) + " < " + (((ClassSignatureContext)_localctx).inheritId!=null?((ClassSignatureContext)_localctx).inheritId.getText():null));
					}
				}

				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Newline) {
					{
					{
					setState(173);
					match(Newline);
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(179);
				singleClassBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<ClassVariablesContext> classVariables() {
			return getRuleContexts(ClassVariablesContext.class);
		}
		public ClassVariablesContext classVariables(int i) {
			return getRuleContext(ClassVariablesContext.class,i);
		}
		public List<ClassMethodsContext> classMethods() {
			return getRuleContexts(ClassMethodsContext.class);
		}
		public ClassMethodsContext classMethods(int i) {
			return getRuleContext(ClassMethodsContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Private || _la==Public) {
				{
				setState(184);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(182);
					classVariables();
					}
					break;
				case 2:
					{
					setState(183);
					classMethods();
					}
					break;
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleClassBodyContext extends ParserRuleContext {
		public ClassVariablesContext classVariables() {
			return getRuleContext(ClassVariablesContext.class,0);
		}
		public ClassMethodsContext classMethods() {
			return getRuleContext(ClassMethodsContext.class,0);
		}
		public SingleClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleClassBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterSingleClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitSingleClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitSingleClassBody(this);
			else return visitor.visitChildren(this);
		}
	}
